# ArchiveGLP

./: .gitignore  DEV_QUICKSTART.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: settings.json
.github/workflows/: ci.yml
apps/agent/: MAC_MINI_SETUP.md  pyproject.toml
apps/agent/archiveglp_agent/: __init__.py  __main__.py  attributed_body.py  capture.py  checkpoint.py  commands.py  config.py  enroll.py  forwarder.py  heartbeat.py  keystore.py  normalize.py  pump.py  schema.py  server_key.py  signing.py
apps/agent/tests/: conftest.py  test_attributed_body.py  test_capture.py  test_commands.py  test_enroll.py  test_forwarder.py  test_heartbeat.py  test_keystore.py  test_normalize.py  test_pump.py  test_signing.py
apps/api/: package.json  tsconfig.json
apps/api/src/: admin.test.ts  admin.ts  archiver.test.ts  archiver.ts  authorizer.ts  (+9 more)
apps/dashboard/: .env.example  SUPABASE_SETUP.md  middleware.ts  next.config.mjs  package.json  tsconfig.json
infra/: DEPLOY.md  cdk.context.json.example  cdk.json  package.json  tsconfig.json
infra/lib/: api.ts  auth.ts  context.ts  db.ts  firm-stack.ts  lambda-code.ts  migrations.ts  queue.ts  replica-stack.ts  storage.ts
infra/migrations/: 001_init.sql  002_pending_enrollment.sql  README.md
infra/test/: compliance.test.ts
scripts/: dev-bootstrap.sh  seed-dev.sql
supabase/migrations/: 20260421000000_archiveglp_schema.sql  20260421120000_remediation_actions.sql  20260421130000_command_redelivery.sql  20260421140000_command_ttl.sql  20260421150000_diagnose_action.sql
(+50 files in other folders)
